# nexus-test

./: .env.test.example  .gitignore  BENCHMARK.md  CONTRIBUTING.md  README.md  TEST_PLAN.md  pyproject.toml
.github/workflows/: auto.yml  federation.yml  quick.yml
benchmarks/herb/enterprise-context/: README.md  customers.jsonl  employees.jsonl  products.jsonl
benchmarks/herb/qa/: answerable.jsonl
benchmarks/memory/: __init__.py  __main__.py  baselines.py  checkpoint.py  config.py  models.py  report.py  run.py  runner.py
benchmarks/memory/datasets/: base.py  locomo.py  longmemeval.py  tofu.py
benchmarks/memory/llm/: client.py  prompts.py
benchmarks/memory/pipeline/: ingest.py  judge.py  metrics.py  query.py
doc/: mcp.md  pay.md  search.md
docs/: auth-sessions.md  kernel-file-ops.md  memory.md  observability.md  platform-services.md  rebac-permissions.md  scheduler.md  search.md  vfs-hooks.md  zone-isolation.md
scripts/: download_memory_benchmarks.sh  generate_herb_data.py  nexus-test  serve-for-tests.sh  serve-pay-tests.py
tests/: config.py  conftest.py
tests/agent/: test_agent.py  test_agent_registry.py
tests/auth/: conftest.py  test_auth.py  test_oauth.py
tests/chaos/: conftest.py
tests/eventlog/: test_eventlog.py
tests/events/: conftest.py  test_event_advanced.py  test_event_bus.py  test_event_concurrency.py  test_event_delivery.py  test_event_exporters.py  test_event_federation.py  test_event_isolation.py  test_event_operations.py  test_event_permissions.py  test_event_redis.py  test_event_sse.py  test_event_watch.py
tests/federation/: conftest.py
tests/helpers/: api_client.py  assertions.py  data_generators.py  docker_helpers.py  zone_keys.py
tests/hooks/: conftest.py  test_hooks.py  test_hooks_backends.py
tests/ipc/: conftest.py  test_ipc.py
tests/kernel/: conftest.py  test_cas_metadata.py  test_crud.py  test_file_edit.py  test_glob_grep.py  test_stress.py
tests/llm/: conftest.py  test_llm.py
tests/mcp/: conftest.py  test_mcp.py
tests/memory/: conftest.py  test_abstention.py  test_conflict_resolution.py  test_consolidation.py  test_context_saturation.py  test_coreference.py  test_deletion.py  test_entity_extraction.py  test_invalidate_revalidate.py  test_lineage.py  test_memory.py  test_memory_advanced.py  test_multi_agent.py  test_multi_session.py  test_procedural.py  test_query.py  test_query_perf.py  test_relationship_extraction.py  test_selective_forgetting.py  test_semantic_search.py  test_silent_failure.py  test_store.py  test_temporal.py  test_version_history.py  test_write_perf.py  test_zone_scoped.py
tests/mount/: test_mount.py
tests/namespace/: test_namespace.py
tests/obs/: conftest.py  test_features_ops.py  test_health.py  test_metrics.py  test_probes.py
tests/pay/: conftest.py  test_pay.py
tests/rebac/: conftest.py  test_rebac.py  test_rebac_advanced.py  test_rebac_backends.py  test_rebac_extended.py  test_rebac_lifecycle_extended.py
tests/scheduler/: conftest.py  test_scheduler.py  test_scheduler_classify.py  test_scheduler_isolation.py  test_scheduler_lifecycle.py  test_scheduler_perf.py  test_scheduler_permissions.py  test_scheduler_stress.py
tests/search/: conftest.py  test_cache_dedup.py  test_fulltext.py  test_herb_benchmark.py  test_herb_qa.py  test_index_on_write.py  test_query_expansion.py  test_rebac.py  test_search.py  test_semantic.py  test_warmup.py  test_zoekt.py
tests/sync/: test_sync.py
tests/upload/: test_upload.py
tests/zone/: conftest.py  test_edge_cases.py  test_isolation.py  test_lifecycle.py
